--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "shallowequal": "^1.1.0",
+    "uuid": "^8.3.2",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.0.0-beta.3"
